Still not working. Can select the image but it's in two columns

--- a/app/style/index.html
+++ b/app/style/index.html
@@ -11,39 +11,39 @@
     <div class="container">
         <div class="image-gallery">
             <div class="image-item" data-image="Image 1" onclick="selectImage(1)">
-                <img src="/test_images/1.jpg?v=1.0" alt="Image 1">
-                <div>Image 12</div>
+                <img src="/test_images/1.jpg" alt="Image 1">
+                <div>Image 1</div>
             </div>
-        <div class="image-item" data-image="Image 2" onclick="selectImage(2)">
-                <img src="/test_images/1.jpg?v=1.0" alt="Image 2">
-                <!-- <div>Image 2</div> -->
+            <div class="image-item" data-image="Image 2" onclick="selectImage(2)">
+                <img src="/test_images/2.jpg" alt="Image 2">
+                <div>Image 2</div>
             </div>
             <div class="image-item" data-image="Image 3" onclick="selectImage(3)">
                 <img src="/test_images/3.jpg?v=1.0" alt="Image 3">
-                <!-- <div>Image 3</div> -->
+                <div>Image 3</div>
             </div>
             <div class="image-item" data-image="Image 4" onclick="selectImage(4)">
                 <img src="/test_images/4.jpg?v=1.0" alt="Image 4">
-                <!-- <div>Image 4</div> -->
+                <div>Image 4</div>
             </div>
             <div class="image-item" data-image="Image 5" onclick="selectImage(5)">
                 <img src="/test_images/5.jpg?v=1.0" alt="Image 5">
-                <!-- <div>Image 5</div> -->
+                <div>Image 5</div>
             </div>
             <div class="image-item" data-image="Image 6" onclick="selectImage(6)">
                 <img src="/test_images/6.jpg?v=1.0" alt="Image 6">
-                <!-- <div>Image 6</div> -->
+                <div>Image 6</div>
             </div>
             <div class="image-item" data-image="Image 7" onclick="selectImage(7)">
                 <img src="/test_images/7.jpg?v=1.0" alt="Image 7">
-                <!-- <div>Image 7</div> -->
+                <div>Image 7</div>
             </div>
             <div class="image-item" data-image="Image 8" onclick="selectImage(8)">
                 <img src="/test_images/8.jpg?v=1.0" alt="Image 8">
-                <!-- <div>Image 8</div> -->
+                <div>Image 8</div>
             </div>
-        
-            <div class="editor">
+        </div>
+        <div class="editor">
             <div id="selected-image">
                 <img id="selected-image-display" src="" alt="Selected Image" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
