Correct the image displayed as output

--- a/app/style/index.html
+++ b/app/style/index.html
@@ -23,8 +23,8 @@
                 <input type="hidden" id="selected-image-name" name="image_name">
                 <button type="submit" id="apply-effect-button">Apply Black and White Effect</button>
             </form>
-            <div id="image-edited">
-                <!-- Edited image will be displayed here -->
+            <div id="edited-results">
+                <img id="edited-image-display" src="" alt="Edited Image" style="max-width: 100%;">
             </div>
         </div>
     </div>
